--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="container">
 
               <h1 class="hero-title text-center">Taproot powered Colored Coins </h1>
-              <p class="hero-text text-center">OnePixel is built on the innovative approach of the Ordinals theory, which allows us to represent each satoshi as a unique and trackable asset. This approach enables the creation and tracking of colored coins on the Bitcoin network in a novel and efficient way.<br>Unkine BRC-20, OnePixel assets only require inscribe during token issuance, not transfers. No addional consensus layer is required, and double spends are not possible. Create, trade, and manage your own colored coins on the Bitcoin taproot network.</p>
+              <p class="hero-text text-center">OnePixel is built on the innovative approach of the Ordinals theory, which allows us to represent each satoshi as a unique and trackable asset. This approach enables the creation and tracking of colored coins on the Bitcoin network in a novel and efficient way.<br>Unlike BRC-20, OnePixel assets only require inscribe during token issuance, not transfers. No addional consensus layer is required, and double spends are not possible. Create, trade, and manage your own colored coins on the Bitcoin taproot network.</p>
             </div>
             
           
