--- a/inscribe.html
+++ b/inscribe.html
@@ -51,7 +51,7 @@
     <h6 style="margin-top: -15px;">
         Experimental Bitcoin Ordinals based colored coins community inscription tool.
         Join
-        our <a href="https://discord.gg/SSwWBKua" target="_blank">Discord</a>.
+        our <a href="https://discord.gg/UgUj3jYmUW" target="_blank">Discord</a>.
     </h6>
     <h2 class="safari_warning">This tool may not work in safari browser. If you are using that, consider switching.</h2>
     <div id="setup">
